# KryosEngine

./: .gitattributes  .gitignore  .gitmodules  NOTICE  README.md  Setup.bat
Scripts/: Build.bat  Setup.bat
Source/: CMakeLists.txt
Source/Applications/Studio/: Studio.cpp
Source/Engine/: Kryos.hpp
Source/Engine/Core/: Application.cpp  Application.hpp  Core.hpp  Entrypoint.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Window.cpp  Window.hpp  WindowData.hpp
Source/Engine/Core/Container/Arrays/: DynamicArray.cpp  DynamicArray.hpp
Source/Engine/Core/Container/Hashs/: HashTable.hpp
Source/Engine/Core/Container/Strings/: String.cpp  String.hpp  StringView.cpp  StringView.hpp
Source/Engine/Core/Containers/Arrays/: DynamicArray.cpp  DynamicArray.hpp
Source/Engine/Core/Containers/Hashs/: HashTable.hpp
Source/Engine/Core/Containers/Strings/: String.cpp  String.hpp  StringView.cpp  StringView.hpp
Source/Engine/Core/Event/: EventBus.cpp  EventBus.hpp  InputEvents.hpp  WindowEvents.hpp
Source/Engine/Core/Input/: Input.hpp
Source/Engine/Core/Memory/: Allocator.cpp  Allocator.hpp  SmartPointers.hpp
Source/Engine/Core/UUID/: UUID.cpp  UUID.hpp
Source/Engine/ECS/: ComponentPool.cpp  ComponentPool.hpp  ECSCommon.hpp  Registry.cpp  Registry.hpp
Source/Engine/Event/: Event.hpp  WindowEvents.hpp
Source/Engine/Input/: Input.cpp  Input.hpp  KeyCodes.hpp
Source/Engine/Logging/: Log.hpp
Source/Engine/Logging/Logger/: CoreLog.cpp  CoreLog.hpp
Source/Engine/Math/: DataTypes.hpp  Vector2D.hpp
Source/Engine/Platform/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.hpp
Source/Engine/Platform/Window/Win32/: Win32Window.cpp  Win32Window.hpp
Source/Engine/Runtime/: Application.cpp  Application.hpp  Entrypoint.hpp
Source/Engine/Threading/: TaskManager.cpp  TaskManager.hpp
Source/Engine/Time/: Time.cpp  Time.hpp
Source/Engine/Window/: Window.cpp  Window.hpp  WindowData.hpp
Source/Fonts/: Fonts.h
Source/Fonts/Inter/: InterExtraBold-embed.h  InterMedium_embed.h
Source/Studio/: KryosStudio.cpp
Source/Studio/Layers/Editor/: EditorLayer.cpp  EditorLayer.hpp
Source/Studio/Layers/Launcher/: LauncherLayer.cpp  LauncherLayer.hpp
